--- a/PAW_FP_05/Exercicio1.1/package.json
+++ b/PAW_FP_05/Exercicio1.1/package.json
@@ -13,7 +13,9 @@
     "license": "ISC",
     "dependencies": {
         "ejs": "^3.0.2",
-        "express": "^4.17.1"
+        "express": "^4.17.1",
+        "fs": "0.0.1-security",
+        "jsonfile": "^6.0.1"
     },
     "devDependencies": {
         "nodemon": "^2.0.3"
