--- a/PAW_FP_05/Exercicio1/package.json
+++ b/PAW_FP_05/Exercicio1/package.json
@@ -14,8 +14,10 @@
     "dependencies": {
         "ejs": "^3.0.2",
         "express": "^4.17.1",
+        "file": "^0.2.2",
         "fs": "0.0.1-security",
-        "jsonfile": "^6.0.1"
+        "jsonfile": "^6.0.1",
+        "path": "^0.12.7"
     },
     "devDependencies": {
         "nodemon": "^2.0.3"
